<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linear_layout_main">

    <TextView
        android:id="@+id/section_name_text"
        style="@style/section_text"
        android:text="@string/section_name" />

    <TextView
        android:id="@+id/type_text"
        style="@style/type_text"
        android:text="@string/type_of_section" />

    <TextView
        android:id="@+id/webTitle_text"
        style="@style/content_text"
        android:text="@string/content_of_section" />

    <RelativeLayout
        style="@style/relative_layout">

        <TextView
            android:id="@+id/pillar_name_text"
            style="@style/pillar_text"
            android:layout_alignParentStart="true"
            android:text="@string/pillar_name" />

        <TextView
            android:id="@+id/web_publication_date_text"
            style="@style/date_text"
            android:layout_alignParentEnd="true"
            android:text="@string/publication_date" />
    </RelativeLayout>


</LinearLayout>